# excelater

./: .env.example  .gitignore  AI_SUMMARY.md  CHANGELOG_AI.md  CLAUDE.md  CLAUDE_CONTEXT.md  DEPENDENCY_MAP.md  Dockerfile  KEY_FILES.md  ONBOARDING.md  PROJECT_CONTEXT.md  PROMPTS.md  README.md  deploy.ps1  docker-compose.yml  install-service.ps1  pyproject.toml
.claude/: settings.json  settings.local.json
app/: __init__.py  access_engine.py  auth.py  auth_routes.py  com_registry.py  config.py  database.py  excel_engine.py  main.py  notifications.py  routes.py  scheduler.py
app/static/: index.html  login.html
app/workflows/: __init__.py  base.py  weekly_excel_copy.py
scripts/: audit_access_db.py  check_smtp.ps1  check_smtp.py  create_superadmin.py  dump_pipeline_configs.py  reset_password.py  test_bcrypt.py
tests/: conftest.py  test_routes.py  test_scheduler.py  test_workflows.py
